--- a/Index-02.html
+++ b/Index-02.html
@@ -23,6 +23,8 @@
 <body>
 
 <div class="page-wrapper">
+
+
     <header class="menu">
         <div class="container">
             <div class="row align-items-center">
@@ -65,28 +67,21 @@
         </div>
     </header>
     <!-- hero section start  -->
-    <section class="Hero" style="background-image: url(images/hero/hero.jpeg); background-position: center; background-size: cover; background-repeat: no-repeat">
+    <section class="Hero" style="background-image: url(images/hero/h2-slider.jpeg); background-position: center; background-size: cover; background-repeat: no-repeat;">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7">
-                    <div class="hero-content">
-                        <div class="hero-content-left">
-                            <h2>
-                                The Best Theme To Create Your <span>Digital Marketplace</span>   
-                            </h2>
-                            <p>We make selling digital products a breeze. Easy Digital Downloads
-                                is simple to use and free to download.
-                            </p>
-                            <button class="main-btn">Explore Themes</button>
-                            <button class="main-btn">Get Started Now</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <div class="hero-right">
-                        <div class="hero-right-img">
-                            <img src="images/hero/hero02.png" alt="">
-                        </div>
+                <div class="hero-content text-center">
+                    <h2>Start Your <span>Digital Marketplace</span> Today!</h2>
+                    <p>The Biggest Marketplace for Digital Product & the powerful, template</p>
+                    <div class="hero-form">
+                        <select name="service" class="form-control">
+                            <option disabled="disabled" selected="">All</option>
+                            <option value="">Page-01</option>
+                            <option value="">Page-02</option>
+                            <option value="">page-03</option>
+                        </select>
+                        <input type="text" placeholder="Get Started Now">
+                        <a href="#" class="search-btn main-btn">Subscribe</a>
                     </div>
                 </div>
             </div>
@@ -94,47 +89,45 @@
     </section>
     <!-- hero section end  -->
 
-    <!-- service section start  -->
-    <section class="service section-padding">
+    <!-- hero counter section start  -->
+    <section class="hero-counter">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 mb-30">
-                    <div class="single-service">
-                        <div class="service-icon card-icon color-01">
-                            <img src="images/service/Service-icon01.png" alt="">
-                        </div>
-                        <div class="service-content">
-                            <h4>Security Assurance</h4>
-                            <p>Our theme architecture is designed for maximize security and prevent malware, Dos Attack other.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 mb-30">
-                    <div class="single-service">
-                        <div class="service-icon card-icon color-02">
-                            <img src="images/service/Service-icon02.png" alt="">
-                        </div>
-                        <div class="service-content">
-                            <h4>Best Customer Support</h4>
-                            <p>Testing closely, we ship themes. Yet,but anything goes out of track, Support team is there to get it </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 mb-30">
-                    <div class="single-service">
-                        <div class="service-icon card-icon color-03">
-                            <img src="images/service/Service-icon03.png" alt="">
-                        </div>
-                        <div class="service-content">
-                            <h4>Great Quality Theme</h4>
-                            <p>We craft powerful themes to keep visitors engaged and maximize store sales extensively.</p>
-                        </div>
-                    </div>
-                </div>
+                <div class="counter-wrapper">
+                    <ul class="customer-satisfiction">
+                        <li>
+                            <div class="satisfiction-img">
+                                <img src="images/count/happy-emoji.png" alt="">
+                            </div>
+                            <div class="satisfiction-content">
+                                <p>99% Customer</p>
+                                <h4>satisfiction</h4>                                
+                            </div>
+                        </li>
+                        <li>
+                            <div class="satisfiction-content">
+                                <h3><span class="odometer" data-count="20165">00</span>+</h3>
+                                <p>Amazing Products</p>                    
+                            </div>
+                        </li>
+                        <li>
+                            <div class="satisfiction-content">
+                                <h3><span class="odometer" data-count="32567">00</span>+</h3>
+                                <p>Total Item Sold</p>                    
+                            </div>
+                        </li>
+                        <li>
+                            <div class="satisfiction-content">
+                                <h3><span class="odometer" data-count="603598">$</span>+</h3>
+                                <p>Total Earning</p>                    
+                            </div>
+                        </li>
+                    </ul>
+                </div> 
             </div>
         </div>
     </section>
-    <!-- service section end  -->
+    <!-- hero counter section end  -->
 
     <!-- new product list area start  -->
     <section class="new-product section-padding">
@@ -148,38 +141,38 @@
             <div class="row">
                 <div class="new-product-active owl-carousel">                    
                     <div class="new-product-wrapper">
-                        <div class="single-product mb-30">
-                            <div class="new-product-img color-01">
-                                <img src="images/new-product/icon01.png" alt="">
+                        <div class="single-product single-product-02 mb-30">
+                            <div class="new-product-img">
+                                <img src="images/new-product/Page-02/New-product01.jpeg" alt="">
                             </div>
                             <div class="new-product-content">
                                 <p>Barristar</p>
                             </div>
                         </div>
-                        <div class="single-product mb-30">
-                            <div class="new-product-img color-01">
-                                <img src="images/new-product/icon01.png" alt="">
+                        <div class="single-product single-product-02 mb-30">
+                            <div class="new-product-img">
+                                <img src="images/new-product/Page-02/New-product02.jpeg" alt="">
                             </div>
                             <div class="new-product-content">
-                                <p>Barristar</p>
+                                <p>Lavelo</p>
                             </div>
                         </div>
                     </div>
                     <div class="new-product-wrapper">
-                        <div class="single-product mb-30">
-                            <div class="new-product-img color-02">
-                                <img src="images/new-product/icon02.png" alt="">
+                        <div class="single-product single-product-02 mb-30">
+                            <div class="new-product-img">
+                                <img src="images/new-product/Page-02/New-product01.jpeg" alt="">
                             </div>
                             <div class="new-product-content">
                                 <p>Barristar</p>
                             </div>
                         </div>
-                        <div class="single-product mb-30">
-                            <div class="new-product-img color-02">
-                                <img src="images/new-product/icon02.png" alt="">
+                        <div class="single-product single-product-02 mb-30">
+                            <div class="new-product-img">
+                                <img src="images/new-product/Page-02/New-product02.jpeg" alt="">
                             </div>
                             <div class="new-product-content">
-                                <p>Barristar</p>
+                                <p>Lavelo</p>
                             </div>
                         </div>
                     </div>
